[tool.poetry]
name = "organizer"
version = "0.1.0"
description = ""
authors = ["ShuminHome <shuminfu99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
tkinterdnd2 = "^0.4.2"
pyinstaller = "6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
